[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Scenes/pixeltheme.tres" type="Theme" id=2]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackGround" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0156863, 0.0705882, 0.203922, 0.831373 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="CenterContainer"]
margin_left = 250.0
margin_top = 140.0
margin_right = 550.0
margin_bottom = 460.0
custom_constants/separation = 30

[node name="Label" type="Label" parent="CenterContainer/Buttons"]
margin_right = 300.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
text = "Pause Menu"
align = 1

[node name="Control" type="Control" parent="CenterContainer/Buttons"]
margin_top = 80.0
margin_right = 300.0
margin_bottom = 80.0

[node name="Button" type="Button" parent="CenterContainer/Buttons"]
margin_top = 110.0
margin_right = 300.0
margin_bottom = 160.0
rect_min_size = Vector2( 300, 50 )
text = "Resume Game"

[node name="Button3" type="Button" parent="CenterContainer/Buttons"]
margin_top = 190.0
margin_right = 300.0
margin_bottom = 240.0
rect_min_size = Vector2( 300, 50 )
text = "restart"

[node name="Button2" type="Button" parent="CenterContainer/Buttons"]
margin_top = 270.0
margin_right = 300.0
margin_bottom = 320.0
rect_min_size = Vector2( 300, 50 )
text = "Quit"

[connection signal="pressed" from="CenterContainer/Buttons/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CenterContainer/Buttons/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="CenterContainer/Buttons/Button2" to="." method="_on_Button2_pressed"]
